objects/nFORCE__Test_Object__c.object
<CustomObject>
    <description>The object is used for testing purposes only.</description>
    <fields>
        <fullName>nFORCE__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for testing purposes only.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Test Objects</relationshipLabel>
        <relationshipName>Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Date__c</fullName>
        <description>Used in unit tests.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Dependent_Multiselect__c</fullName>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Dependent Multiselect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>nFORCE__Test_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Double__c</fullName>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Double</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Forms_Translate_Picklist__c</fullName>
        <description>This field is for internal use only. It is used to test the TRANSLATE attribute on the FIELD token in forms. Some of the values are translated to ensure the correct value is returned in the unit testing.</description>
        <label>Test_Forms_Translate_Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>apple</fullName>
                </value>
                <value>
                    <fullName>orange</fullName>
                </value>
                <value>
                    <fullName>banana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Percent__c</fullName>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Picklist_Default__c</fullName>
        <description>Test default picklist settings</description>
        <label>Test Picklist Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selection1</fullName>
                    <default>true</default>
                    <label>Selection1</label>
                </value>
                <value>
                    <fullName>Selection2</fullName>
                </value>
                <value>
                    <fullName>Selection3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Picklist__c</fullName>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
                <value>
                    <fullName>Five</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Rich_Textarea__c</fullName>
        <description>Used in unit tests.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Rich Textarea</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Test_Text_Formula__c</fullName>
        <description>Used in unit tests.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Text Formula</label>
        <type>Text</type>
    </fields>
    <label>Test Object</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>